[package]
name = "yarsi"
version = "0.1.0"
edition = "2021"
authors = [ "PwnWriter < hey@pwnwriter.xyz>", "ashokcpg < hey@ashokcpg.com >" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.27.7"          
columns = { git = "https://github.com/S0raWasTaken/Columns", branch = "master" }

